--- a/src/app/front/body/body.component.html
+++ b/src/app/front/body/body.component.html
@@ -3,7 +3,7 @@
   <mat-grid-list cols="4" rowHeight="620">
     <mat-grid-tile *ngFor="let i of [0, 1, 2, 3]">
       <mat-card class="example-card">
-        <img mat-card-image src="./assets/img.png" alt="Photo of a Shiba Inu">
+        <img mat-card-image src="../../../assets/img.png" alt="Photo of a Shiba Inu">
         <mat-card-content style="padding-top: 10px" class="mat-body-2">
           <p>Go Slow Shirt fruit</p>
           <p>32.00 EUR</p>
