--- a/src/app/front/resell/resell.component.html
+++ b/src/app/front/resell/resell.component.html
@@ -2,7 +2,7 @@
 <div style="padding-top:10%;display: flex; justify-content: center;  background-color: white; height: 20vh;">
   <h3 style="" class="mat-subtitle-1"> <strong>WELCOME TO WEDRESSGREEN RE-SELL</strong></h3>
   <br><br>
-  <p>WeDressGreen Re-sell is your go-to place to buy and sell pre-loved good quality pieces.</p>
+  <h3>WeDressGreen Re-sell is your go-to place to buy and sell pre-loved good quality pieces.</h3>
   <br>
   <button mat-flat-button> Shop</button>
   <button mat-flat-button> Sell</button>
@@ -14,7 +14,7 @@
   <mat-grid-list cols="4" rowHeight="620">
     <mat-grid-tile *ngFor="let i of [0, 1, 2, 3]">
       <mat-card class="example-card">
-        <img mat-card-image src="./assets/img.png" alt="Photo of a Shiba Inu">
+        <img mat-card-image src="../../../assets/img.png" alt="Photo of a Shiba Inu">
         <mat-card-content style="padding-top: 10px" class="mat-body-2">
           <p>Go Slow Shirt fruit</p>
           <p>32.00 EUR</p>
