--- a/src/app/front/products/product-list/product-list.component.html
+++ b/src/app/front/products/product-list/product-list.component.html
@@ -9,7 +9,7 @@
     <mat-grid-tile class="clickable" *ngFor="let i of [0, 1, 2, 3,4,5,6,7]">
 
       <mat-card [routerLink]="['/front/products/info', i]" class="example-card">
-        <img mat-card-image src="../../../../assets/products.png" alt="Photo of a Shiba Inu">
+        <img mat-card-image src="../../../../assets/img.png" alt="Photo of a Shiba Inu">
         <mat-card-content style="padding-top: 10px" class="mat-body-2">
           <p>Go Slow Shirt fruit</p>
           <p>32.00 EUR</p>
