--- a/src/app/front/products/product-page/product-page.component.html
+++ b/src/app/front/products/product-page/product-page.component.html
@@ -1,7 +1,7 @@
 <mat-grid-list cols="2" rowHeight="650">
   <mat-grid-tile>
     <mat-card class="example-card">
-      <img class="example-header-image" style="width: 100%; height: 100%;" mat-card-image src="../../../../assets/products.png"
+      <img class="example-header-image" style="width: 100%; height: 100%;" mat-card-image src="../../../../assets/img.png"
            alt="Photo of a Shiba Inu">
     </mat-card>
   </mat-grid-tile>
