--- a/src/app/front/resell/resell-main/resell-main.component.html
+++ b/src/app/front/resell/resell-main/resell-main.component.html
@@ -1,9 +1,9 @@
 
-<div style="padding-top:5%;padding-bottom:5%;display: flex; flex-direction: column; justify-content: center; align-items: center; background-color: white; height: 20vh;">
+<div style="padding-top:10%;padding-bottom:10%;display: flex; flex-direction: column; justify-content: center; align-items: center; background-color: white; height: 20vh;">
   <h3 class="mat-subtitle-1"><strong>WELCOME TO WEDRESSGREEN RE-SELL</strong></h3>
-  <p style="margin-top: 10px; text-align: center;">WeDressGreen Re-sell is your go-to place to buy and sell pre-loved good quality pieces.</p>
-  <button mat-flat-button>Shop</button>
-  <button mat-flat-button>Sell</button>
+  <p style="margin-top: 5px; text-align: center;">WeDressGreen Re-sell is your go-to place to buy and sell pre-loved good quality pieces.</p>
+  <a mat-button style="margin-top:2%;padding:1%">Shop</a>
+  <a mat-button style="padding:1%" routerLink="sell">Sell</a>
 </div>
 
 
