--- a/src/app/front/resell/resell-product/resell-product.component.html
+++ b/src/app/front/resell/resell-product/resell-product.component.html
@@ -1,6 +1,17 @@
-
-add product
-
-
-
-
+<mat-horizontal-stepper>
+  <mat-step label="FIND YOUR PIECE">
+    Step 1 Content
+  </mat-step>
+  <mat-step label="CONDITION REPORT">
+    Step 2 Content
+  </mat-step>
+  <mat-step label="ADD PHOTOS">
+    Step 3 Content
+  </mat-step>
+  <mat-step label="SET PRICE">
+    Step 3 Content
+  </mat-step>
+  <mat-step label="CONFIRM LISTING">
+    Step 3 Content
+  </mat-step>
+</mat-horizontal-stepper>
