resell page modif

--- a/src/app/front/body/body.component.html
+++ b/src/app/front/body/body.component.html
@@ -1,4 +1,4 @@
-<h3 style="margin: 20px" class="mat-subtitle-1"> <strong>LATEST LAUNCH</strong></h3>
+<h3 style="margin: 20px" class="mat-subtitle-1"> <strong>{{'home.latestlaunch' | translate }}</strong></h3>
 <div class="scroll-container">
   <mat-grid-list cols="4" rowHeight="620">
     <mat-grid-tile *ngFor="let i of [0, 1, 2, 3]">
@@ -13,3 +13,4 @@
     </mat-grid-tile>
   </mat-grid-list>
 </div>
+
